[gd_scene load_steps=3 format=3 uid="uid://crn66jugyrp6t"]

[ext_resource type="Script" path="res://scripts/menus/hpBox.gd" id="1_5xigc"]
[ext_resource type="Theme" uid="uid://dss6di43qaueh" path="res://media/themes/textBoxTheme.tres" id="1_ro86q"]

[node name="hpBox" type="CanvasLayer"]
script = ExtResource("1_5xigc")

[node name="MarginContainer" type="MarginContainer" parent="."]
offset_right = 170.0
offset_bottom = 69.0

[node name="Panel" type="Panel" parent="MarginContainer"]
layout_mode = 2
theme = ExtResource("1_ro86q")

[node name="LabelCharacter1" type="Label" parent="MarginContainer/Panel"]
layout_mode = 0
offset_left = 5.0
offset_top = 5.0
offset_right = 61.0
offset_bottom = 22.0
text = "#####"

[node name="LabelCharacterHP1" type="Label" parent="MarginContainer/Panel"]
layout_mode = 0
offset_left = 66.0
offset_top = 5.0
offset_right = 140.0
offset_bottom = 22.0
text = "HP 000/000"

[node name="LabelCharacter2" type="Label" parent="MarginContainer/Panel"]
layout_mode = 0
offset_left = 5.0
offset_top = 21.0
offset_right = 61.0
offset_bottom = 37.0
text = "#####"

[node name="LabelCharacterHP2" type="Label" parent="MarginContainer/Panel"]
layout_mode = 0
offset_left = 66.0
offset_top = 21.0
offset_right = 140.0
offset_bottom = 38.0
text = "HP 000/000"

[node name="LabelCharacter3" type="Label" parent="MarginContainer/Panel"]
layout_mode = 0
offset_left = 5.0
offset_top = 36.0
offset_right = 61.0
offset_bottom = 52.0
text = "#####"

[node name="LabelCharacterHP3" type="Label" parent="MarginContainer/Panel"]
layout_mode = 0
offset_left = 66.0
offset_top = 36.0
offset_right = 140.0
offset_bottom = 53.0
text = "HP 000/000"

[node name="LabelCharacter4" type="Label" parent="MarginContainer/Panel"]
layout_mode = 0
offset_left = 5.0
offset_top = 50.0
offset_right = 61.0
offset_bottom = 66.0
text = "#####"

[node name="LabelCharacterHP4" type="Label" parent="MarginContainer/Panel"]
layout_mode = 0
offset_left = 66.0
offset_top = 50.0
offset_right = 154.0
offset_bottom = 66.0
text = "HP 000/000"

[node name="Timer" type="Timer" parent="."]

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
